<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/custome_border"
    android:layout_marginBottom="2dp">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:background="@drawable/custome_border"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/userEmailTextView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:background="@color/white"
        android:textColor="@color/darkblue"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceListItem" />

    <!-- Horizontal LinearLayout for nim and kelas TextViews -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userNimTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:background="@color/white"
            android:textColor="@color/darkblue"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/userKelasTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:background="@color/white"
            android:textColor="@color/darkblue"
            android:layout_height="wrap_content"
            android:text="@string/kelas"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <!-- Add other TextViews or Views as needed based on your User model -->

</LinearLayout>
